--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,13 @@ jobs:
         run: |
           msi=$(ls target/release/bundle/msi/*.msi | head -n 1 || true)
           exe=$(ls target/release/bundle/nsis/*.exe | head -n 1 || true)
+          msix=$(ls target/release/bundle/msix/*.msix | head -n 1 || true)
           echo "msi=$msi" >> $GITHUB_OUTPUT
           echo "exe=$exe" >> $GITHUB_OUTPUT
+          echo "msix=$msix" >> $GITHUB_OUTPUT
+          echo "MSI: $msi"
+          echo "EXE: $exe"
+          echo "MSIX: $msix"
 
       - name: Upload MSI Artifact
         uses: actions/upload-artifact@v4
@@ -65,6 +70,12 @@ jobs:
         with:
           name: LiveLayer-EXE
           path: ${{ steps.artifacts.outputs.exe }}
+
+      - name: Upload MSIX Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: LiveLayer-MSIX
+          path: ${{ steps.artifacts.outputs.msix }}
 
       # --- Create Draft GitHub Release with Artifacts ---
       - name: Create GitHub Release
@@ -88,6 +99,7 @@ jobs:
             ### 📥 Download
             - **Windows Installer (Recommended)**: `LiveLayer_${{ steps.version.outputs.version }}_x64-setup.exe`
             - **Windows MSI**: `LiveLayer_${{ steps.version.outputs.version }}_x64_en-US.msi`
+            - **Microsoft Store Package (MSIX)**: `LiveLayer_${{ steps.version.outputs.version }}_x64_en-US.msix`
 
             ### 💻 System Requirements
             - **Windows**: Windows 10 or later
@@ -95,9 +107,15 @@ jobs:
             - **Linux**: Modern Linux distribution with X11 or Wayland
 
             ### 🚀 Installation
+            
+            **For EXE/MSI installers:**
             1. Download the appropriate installer for your system
             2. Run the installer and follow the setup wizard
             3. Launch LiveLayer from your applications menu
+
+            **For MSIX (Microsoft Store):**
+            - The MSIX package is ready for submission to the Microsoft Store
+            - For local testing, see: https://learn.microsoft.com/en-us/windows/msix/package/packaging-uwp-apps#install-your-app-package
 
             ---
 
@@ -106,3 +124,4 @@ jobs:
           files: |
             ${{ steps.artifacts.outputs.msi }}
             ${{ steps.artifacts.outputs.exe }}
+            ${{ steps.artifacts.outputs.msix }}
