--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,198 @@ jobs:
           echo "Version: $version"
           echo "Tag: $tag"
 
-      # --- Build the app (includes .exe, .msi, .msix) ---
+      # --- Build the app (includes .exe, .msi) ---
       - name: Build LiveLayer (Tauri)
         run: npm run tauri build
+
+      # --- Create Self-Signed Certificate for MSIX ---
+      - name: Create Self-Signed Certificate
+        shell: powershell
+        run: |
+          $cert = New-SelfSignedCertificate -Type Custom `
+            -Subject "CN=Ritesh Kokam, O=Ritesh Kokam, C=US" `
+            -KeyUsage DigitalSignature `
+            -FriendlyName "LiveLayer Code Signing" `
+            -CertStoreLocation "Cert:\CurrentUser\My" `
+            -TextExtension @("2.5.29.37={text}1.3.6.1.5.5.7.3.3", "2.5.29.19={text}")
+          
+          $thumbprint = $cert.Thumbprint
+          Write-Host "Certificate Thumbprint: $thumbprint"
+          echo "CERT_THUMBPRINT=$thumbprint" >> $env:GITHUB_ENV
+          
+          # Export certificate
+          $password = ConvertTo-SecureString -String "TempPassword123!" -Force -AsPlainText
+          Export-PfxCertificate -Cert "Cert:\CurrentUser\My\$thumbprint" `
+            -FilePath "certificate.pfx" `
+            -Password $password
+          
+          echo "CERT_PASSWORD=TempPassword123!" >> $env:GITHUB_ENV
+
+      # --- Extract EXE and prepare for MSIX ---
+      - name: Extract Installer Files
+        shell: powershell
+        run: |
+          $version = node -p "require('./package.json').version"
+          $exePath = Get-ChildItem -Path "target/release/bundle/nsis/*.exe" | Select-Object -First 1 -ExpandProperty FullName
+          
+          Write-Host "EXE Path: $exePath"
+          Write-Host "Version: $version"
+          
+          # Create working directory
+          New-Item -ItemType Directory -Force -Path "msix_build"
+          
+          # Extract NSIS installer (7zip style)
+          Write-Host "Extracting installer..."
+          & "C:\Program Files\7-Zip\7z.exe" x "$exePath" -o"msix_build\extracted" -y
+          
+          # If 7z fails, try alternative method
+          if ($LASTEXITCODE -ne 0) {
+            Write-Host "7zip extraction failed, using alternative method..."
+            # Run installer in silent mode to a temp directory
+            $tempInstall = "msix_build\temp_install"
+            New-Item -ItemType Directory -Force -Path $tempInstall
+            Start-Process -FilePath $exePath -ArgumentList "/S", "/D=$tempInstall" -Wait -NoNewWindow
+            Copy-Item -Path "$tempInstall\*" -Destination "msix_build\extracted" -Recurse -Force
+          }
+          
+          echo "VERSION=$version" >> $env:GITHUB_ENV
+          echo "EXE_PATH=$exePath" >> $env:GITHUB_ENV
+
+      # --- Create MSIX Package Structure ---
+      - name: Create MSIX Package
+        shell: powershell
+        run: |
+          $version = $env:VERSION
+          $msixVersion = "$version.0"
+          
+          Write-Host "Creating MSIX package structure..."
+          
+          # Create MSIX directory structure
+          $msixRoot = "msix_package"
+          New-Item -ItemType Directory -Force -Path "$msixRoot"
+          New-Item -ItemType Directory -Force -Path "$msixRoot\Assets"
+          
+          # Copy application files from extracted installer
+          Write-Host "Copying application files..."
+          
+          # Find the main executable in extracted files
+          $appFiles = Get-ChildItem -Path "msix_build\extracted" -Recurse -Filter "*.exe" | 
+                      Where-Object { $_.Name -like "*livelayer*" -or $_.Name -eq "LiveLayer.exe" } |
+                      Select-Object -First 1
+          
+          if ($appFiles) {
+            $exeDir = $appFiles.DirectoryName
+            Copy-Item -Path "$exeDir\*" -Destination $msixRoot -Recurse -Force
+          } else {
+            # Fallback: copy everything
+            Copy-Item -Path "msix_build\extracted\*" -Destination $msixRoot -Recurse -Force
+          }
+          
+          # Copy icon assets
+          Copy-Item -Path "assets\livelayer.ico" -Destination "$msixRoot\Assets\livelayer.ico" -ErrorAction SilentlyContinue
+          Copy-Item -Path "assets\livelayer.png" -Destination "$msixRoot\Assets\livelayer.png" -ErrorAction SilentlyContinue
+          
+          # Create AppxManifest.xml
+          $manifest = @"
+          <?xml version="1.0" encoding="utf-8"?>
+          <Package xmlns="http://schemas.microsoft.com/appx/manifest/foundation/windows10"
+                   xmlns:uap="http://schemas.microsoft.com/appx/manifest/uap/windows10"
+                   xmlns:rescap="http://schemas.microsoft.com/appx/manifest/foundation/windows10/restrictedcapabilities"
+                   xmlns:desktop="http://schemas.microsoft.com/appx/manifest/desktop/windows10">
+            <Identity Name="com.livelayer.app"
+                      Version="$msixVersion"
+                      Publisher="CN=Ritesh Kokam, O=Ritesh Kokam, C=US"
+                      ProcessorArchitecture="x64" />
+            <Properties>
+              <DisplayName>LiveLayer</DisplayName>
+              <PublisherDisplayName>Ritesh Kokam</PublisherDisplayName>
+              <Logo>Assets\livelayer.png</Logo>
+              <Description>LiveLayer brings beautiful wallpapers and a clock overlay to your desktop.</Description>
+            </Properties>
+            <Resources>
+              <Resource Language="en-us" />
+            </Resources>
+            <Dependencies>
+              <TargetDeviceFamily Name="Windows.Desktop" MinVersion="10.0.17763.0" MaxVersionTested="10.0.22621.0" />
+            </Dependencies>
+            <Capabilities>
+              <rescap:Capability Name="runFullTrust" />
+            </Capabilities>
+            <Applications>
+              <Application Id="LiveLayer" Executable="livelayer.exe" EntryPoint="Windows.FullTrustApplication">
+                <uap:VisualElements DisplayName="LiveLayer"
+                                    Description="LiveLayer brings beautiful wallpapers and a clock overlay to your desktop."
+                                    BackgroundColor="transparent"
+                                    Square150x150Logo="Assets\livelayer.png"
+                                    Square44x44Logo="Assets\livelayer.png">
+                </uap:VisualElements>
+              </Application>
+            </Applications>
+          </Package>
+          "@
+          
+          $manifest | Out-File -FilePath "$msixRoot\AppxManifest.xml" -Encoding utf8
+          
+          Write-Host "MSIX package structure created"
+
+      # --- Build MSIX using makeappx ---
+      - name: Build MSIX Package
+        shell: powershell
+        run: |
+          $version = $env:VERSION
+          
+          # Find makeappx.exe from Windows SDK
+          $makeappx = Get-ChildItem "C:\Program Files (x86)\Windows Kits\10\bin\" -Recurse -Filter "makeappx.exe" | 
+                      Where-Object { $_.FullName -like "*\x64\*" } | 
+                      Select-Object -First 1 -ExpandProperty FullName
+          
+          if (-not $makeappx) {
+            Write-Error "makeappx.exe not found!"
+            exit 1
+          }
+          
+          Write-Host "Using makeappx: $makeappx"
+          
+          # Create MSIX package
+          $outputMsix = "LiveLayer_${version}_x64.msix"
+          
+          & $makeappx pack /d "msix_package" /p $outputMsix /l
+          
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Failed to create MSIX package"
+            exit 1
+          }
+          
+          Write-Host "MSIX package created: $outputMsix"
+          echo "MSIX_PATH=$outputMsix" >> $env:GITHUB_ENV
+
+      # --- Sign MSIX Package ---
+      - name: Sign MSIX Package
+        shell: powershell
+        run: |
+          $msixPath = $env:MSIX_PATH
+          
+          # Find signtool.exe from Windows SDK
+          $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits\10\bin\" -Recurse -Filter "signtool.exe" | 
+                      Where-Object { $_.FullName -like "*\x64\*" } | 
+                      Select-Object -First 1 -ExpandProperty FullName
+          
+          if (-not $signtool) {
+            Write-Error "signtool.exe not found!"
+            exit 1
+          }
+          
+          Write-Host "Using signtool: $signtool"
+          
+          # Sign the MSIX package
+          & $signtool sign /fd SHA256 /a /f "certificate.pfx" /p $env:CERT_PASSWORD $msixPath
+          
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Failed to sign MSIX package"
+            exit 1
+          }
+          
+          Write-Host "MSIX package signed successfully"
 
       - name: Get Artifacts Paths
         id: artifacts
@@ -51,7 +240,7 @@ jobs:
         run: |
           msi=$(ls target/release/bundle/msi/*.msi | head -n 1 || true)
           exe=$(ls target/release/bundle/nsis/*.exe | head -n 1 || true)
-          msix=$(ls target/release/bundle/msix/*.msix | head -n 1 || true)
+          msix=$(ls *.msix | head -n 1 || true)
           echo "msi=$msi" >> $GITHUB_OUTPUT
           echo "exe=$exe" >> $GITHUB_OUTPUT
           echo "msix=$msix" >> $GITHUB_OUTPUT
@@ -99,10 +288,10 @@ jobs:
             ### 📥 Download
             - **Windows Installer (Recommended)**: `LiveLayer_${{ steps.version.outputs.version }}_x64-setup.exe`
             - **Windows MSI**: `LiveLayer_${{ steps.version.outputs.version }}_x64_en-US.msi`
-            - **Microsoft Store Package (MSIX)**: `LiveLayer_${{ steps.version.outputs.version }}_x64_en-US.msix`
+            - **Microsoft Store Package (MSIX)**: `LiveLayer_${{ steps.version.outputs.version }}_x64.msix`
 
             ### 💻 System Requirements
-            - **Windows**: Windows 10 or later
+            - **Windows**: Windows 10 1809 or later
             - **macOS**: macOS 10.15 or later  
             - **Linux**: Modern Linux distribution with X11 or Wayland
 
@@ -113,9 +302,10 @@ jobs:
             2. Run the installer and follow the setup wizard
             3. Launch LiveLayer from your applications menu
 
-            **For MSIX (Microsoft Store):**
-            - The MSIX package is ready for submission to the Microsoft Store
-            - For local testing, see: https://learn.microsoft.com/en-us/windows/msix/package/packaging-uwp-apps#install-your-app-package
+            **For MSIX (Microsoft Store Submission):**
+            - Download the MSIX file for Microsoft Store submission
+            - The MSIX is self-signed for testing - Microsoft will re-sign during certification
+            - For local testing: Enable Developer Mode in Windows Settings
 
             ---
 
